--- a/myWebsite/home/templates/home.html
+++ b/myWebsite/home/templates/home.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
 
     <!--Makes the website responsive-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!--Had to add this in to allow the navbar to work-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-    
+
     <!--Navbar of the website-->
     <nav class="navbar navbar-expand-sm topnav">
         <div class="container-fluid">
@@ -109,7 +109,8 @@
 
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: #DDA35D;" href="#">Author one has relesased a new book titled "Adventure Uncharted!"</a>
+                        <a class="nav-link" style="color: #DDA35D;" href="#">Author one has relesased a new book titled
+                            "Adventure Uncharted!"</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" style="color: #DDA35D;" href="#">Caution when using the Internet</a>
@@ -143,7 +144,7 @@
                 <a href="#" class="btn" style="background-color: #3c3a1e; color: #e3deca;"> Read more &rarr;</a>
 
             </div>
-            
+
         </div>
     </div>
 
